[gd_scene load_steps=26 format=2]

[ext_resource path="res://Player/Player.gd" type="Script" id=1]
[ext_resource path="res://Assets/Sprites/playersprites.png" type="Texture" id=2]
[ext_resource path="res://Player/FastPlayerMovementData.tres" type="Resource" id=3]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 0, 240, 48, 48 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 48, 240, 48, 48 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 96, 240, 48, 48 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 144, 240, 48, 48 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 2 )
region = Rect2( 0, 192, 48, 48 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 2 )
region = Rect2( 48, 192, 48, 48 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 2 )
region = Rect2( 96, 192, 48, 48 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 2 )
region = Rect2( 144, 192, 48, 48 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 2 )
region = Rect2( 192, 192, 48, 48 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 2 )
region = Rect2( 240, 192, 48, 48 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 0, 96, 48, 48 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 48, 96, 48, 48 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 2 )
region = Rect2( 96, 96, 48, 48 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 2 )
region = Rect2( 144, 96, 48, 48 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 2 )
region = Rect2( 192, 96, 48, 48 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 2 )
region = Rect2( 240, 96, 48, 48 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 2 )
region = Rect2( 288, 96, 48, 48 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 2 )
region = Rect2( 336, 96, 48, 48 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 2 )
region = Rect2( 384, 96, 48, 48 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 2 )
region = Rect2( 432, 96, 48, 48 )

[sub_resource type="SpriteFrames" id=16]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ) ],
"loop": true,
"name": "Jump",
"speed": 18.0
}, {
"frames": [ SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ) ],
"loop": true,
"name": "Run",
"speed": 20.0
} ]

[sub_resource type="RectangleShape2D" id=24]
extents = Vector2( 5.5, 16.75 )

[node name="Player" type="KinematicBody2D"]
position = Vector2( 125.52, -543.617 )
z_index = -1
collision_layer = 2
script = ExtResource( 1 )
moveData = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -24 )
frames = SubResource( 16 )
animation = "Idle"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.0199966, -21.133 )
shape = SubResource( 24 )

[node name="LadderCheck" type="RayCast2D" parent="."]
position = Vector2( 0, -24 )
cast_to = Vector2( 0, 37 )

[node name="CoyoteJumpTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="JumpBufferTimer" type="Timer" parent="."]
wait_time = 0.05
one_shot = true

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="."]
position = Vector2( 0.480003, -23.383 )

[node name="IdleReset" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
